bugfix: footer overflow

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -6,7 +6,7 @@
 }
 .sq-page{
   display: grid;
-  grid-template-rows: 4.5rem 1fr 5vh;
+  grid-template-rows: 4.5rem 1fr 1.5rem;
   grid-template-columns: 1fr;
 }
 /* Navbar area */
